# marsrover

./: .gitignore  LICENSE  NewSpec.hs  README.md  nobs.hi  output.txt  outputnobs.txt  readme.txt  rover.cabal  rover.cabal.old  stack.yaml  x.txt
console/: Main.hs  Test.hs
console/test/: ParserTests.hs  RenderTests.hs
sg/: rover.cabal  rovernotests.cabal
spec/: AcceptanceSpec.hs  ArbitraryData.hs  CommandsTest.hs  ControllerTest.hs  EnvironmentSpec.hs  EnvironmentTest.hs  GeometrySpec.hs  GeometryTest.hs  InterpreterSpec.hs  Main.hs  ParserSpec.hs  RenderTest.hs  Spec.hs
src/: Commands.hs  Controller.hs  Doctests.hs  Environment.hs  Geometry.hs  Interpreter.hs  Main.hs  Parser.hs  Render.hs  SampleInput.hs  nobs.hs
src/Test/: ControllerTests.hs  EnvironmentTests.hs  GeometryTests.hs
test/: ControllerTests.hs  EnvironmentTests.hs  GeometryTests.hs  Main.hs  ParserTests.hs  RenderTests.hs  Test.hs
