name: rover
version: 0.0.1
cabal-version: >= 1.8
build-type: Simple
license: BSD3
copyright:
maintainer: gareth.rowlands@akqa.com
stability:
homepage:
package-url:
bug-reports:
synopsis: Mars Rover
description: Implements the Mars Rover Challenge as specified here:
             <https://extranet.akqa.com/collaboration/display/intAnoraksChallenge/The+Mars+Rover+Challenge>
category:
author: Gareth Rowlands

library
  hs-source-dirs: src
  build-depends: base >=4.0.0.0, containers -any, mtl, parsec
  exposed-modules: Render Parser Geometry Environment Controller Commands SampleInput
  exposed: True
  buildable: True

executable rover
  hs-source-dirs: console
  main-is: Main.hs
  buildable: True
  build-depends: base, rover
  other-modules:
      AcceptanceSpec,
      ArbitraryData,
      EnvironmentSpec,
      GeometrySpec,
      InterpreterSpec,
      ParserSpec

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base, rover, HUnit, parsec
  other-modules:
      EnvironmentTests,
      GeometryTests,
      ParserTests,
      RenderTests,
      Test

test-suite spec
 type:            exitcode-stdio-1.0
 build-depends:
                  rover,
                  base >= 4,
                  hspec >= 1.4,
                  HUnit,
                  QuickCheck,
                  containers -any, mtl -any,
                  parsec -any,
                  errors
 hs-source-dirs:  spec
 main-is:         Spec.hs
 ghc-options:     -Wall -rtsopts -O0
